--- a/InvoicesBudgetValidator/app.config
+++ b/InvoicesBudgetValidator/app.config
@@ -4,10 +4,13 @@
 
   <connectionStrings>
     <add name="ConnectionString" connectionString="Data Source=192.168.1.81;initial catalog=Menfis_GrupoIndi;user=sa;password=l0g5y5*1;"/>
-    <add name="ConnectionString2" connectionString="Data Source=192.168.1.81;initial catalog=tms_mexa;user=sa;password=l0g5y5*1;"/>
-    <add name="ConnectionString3" connectionString="Data Source=192.168.1.81;initial catalog=Canlink3test;user=sa;password=l0g5y5*1;"/>
+    <add name="ConnectionStringPresupuesto" connectionString="Data Source=192.168.1.81;initial catalog=Presupuesto_test;user=sa;password=l0g5y5*1;"/>
     <add name="WebserviceURL" connectionString="http://66.219.58.242:8084/external_logsys/logsys2"/>
   </connectionStrings>
+  
+  <appSettings>
+      <add key="mailconnection" value="port=587;host=smtp.bizmail.yahoo.com;user=service@logsys.com.mx;password=9S#h-Iq[3-zn,y"/>
+  </appSettings>
 
 
 </configuration>
