--- a/InvoicesBudgetValidator/app.config
+++ b/InvoicesBudgetValidator/app.config
@@ -1,5 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+  </configSections>
+  
+  <log4net> <!-- Level 1 -->
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+        <file value="log.txt" />
+        <appendToFile value="true" />
+        <rollingStyle value="Size" />
+        <maxSizeRollBackups value="5" />
+        <maximumFileSize value="10MB" />
+        <staticLogFileName value="true" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%date [%thread] %level %logger - %message%newline%exception" />
+        </layout>
+    </appender>
+    <appender name="RollingFileAppender2" type="log4net.Appender.RollingFileAppender">
+        <file value="log.txt" />
+        <appendToFile value="true" />
+        <rollingStyle value="Size" />
+        <maxSizeRollBackups value="5" />
+        <maximumFileSize value="10MB" />
+        <staticLogFileName value="true" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%date [%thread] %level %logger - %message%newline%exception" />
+        </layout>
+    </appender>
+    <appender name="RollingFileAppender3" type="log4net.Appender.RollingFileAppender">
+        <file value="log.txt" />
+        <appendToFile value="true" />
+        <rollingStyle value="Size" />
+        <maxSizeRollBackups value="5" />
+        <maximumFileSize value="10MB" />
+        <staticLogFileName value="true" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%date [%thread] %level %logger - %message%newline%exception" />
+        </layout>
+    </appender>
+    <root>
+      <level value="ERROR"/>
+      <appender-ref ref="RollingFileAppender"/>
+    </root>
+    <logger name="Program">
+        <level value="ERROR" additivity="false"/>
+        <appender-ref ref="RollingFileAppender2"/>
+    </logger>
+  <logger name="NHibernateHelper">
+        <level value="ERROR" additivity="false"/>
+        <appender-ref ref="RollingFileAppender3"/>
+    </logger>
+    <logger name="NHibernateHelperBudget">
+        <level value="ERROR" additivity="false"/>
+        <appender-ref ref="RollingFileAppender3"/>
+    </logger>
+  </log4net>
+  
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
 
   <connectionStrings>
@@ -8,9 +64,15 @@
     <add name="WebserviceURL" connectionString="http://66.219.58.242:8084/external_logsys/logsys2"/>
   </connectionStrings>
   
+  
   <appSettings>
       <add key="mailconnection" value="port=587;host=smtp.bizmail.yahoo.com;user=service@logsys.com.mx;password=9S#h-Iq[3-zn,y"/>
+      <add key="Mongo" value="mongodb://bi.mexamerik.com:27017"/>
+      <add key="DB" value="Menfis_Emails"/>
+      <add key="Collection" value="default_emails"/>
   </appSettings>
+  
+  
 
 
 </configuration>
