--- a/InvoicesBudgetValidator/packages.config
+++ b/InvoicesBudgetValidator/packages.config
@@ -3,5 +3,8 @@
   <package id="FluentNHibernate" version="2.0.3.0" targetFramework="net45" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
   <package id="log4net" version="2.0.5" targetFramework="net45" />
+  <package id="MongoDB.Bson" version="2.2.4" targetFramework="net45" />
+  <package id="MongoDB.Driver" version="2.2.4" targetFramework="net45" />
+  <package id="MongoDB.Driver.Core" version="2.2.4" targetFramework="net45" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net45" />
 </packages>
