--- a/InvoicesBudgetValidator/app.config
+++ b/InvoicesBudgetValidator/app.config
@@ -67,9 +67,11 @@
   
   <appSettings>
       <add key="mailconnection" value="port=587;host=smtp.bizmail.yahoo.com;user=service@logsys.com.mx;password=9S#h-Iq[3-zn,y"/>
-      <add key="Mongo" value="mongodb://bi.mexamerik.com:27017"/>
+      <add key="Mongo" value="mongodb://192.168.1.81:27017"/>
       <add key="DB" value="Menfis_Emails"/>
       <add key="Collection" value="default_emails"/>
+      <add key="menfisservices" value="http://bi.mexamerik.com:8089/services/received/invoice/"/>
+      <add key="presupuesto_user" value="sistema:l0g5y5*1"/>
   </appSettings>
   
   
