--- a/InvoicesBudgetValidator/InvoicesBudgetValidator.csproj
+++ b/InvoicesBudgetValidator/InvoicesBudgetValidator.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Maps\BudgetMap.cs" />
     <Compile Include="Maps\BudgetPartyMap.cs" />
     <Compile Include="Maps\ConsolidadoMap.cs" />
+    <Compile Include="Maps\PartyMap.cs" />
     <Compile Include="Maps\ReceivedBudgetTimelineMap.cs" />
     <Compile Include="Maps\ReceivedInvoicesMap.cs" />
     <Compile Include="Maps\Received_Archived_Map.cs" />
@@ -102,7 +103,9 @@
     <Compile Include="Model\Consolidado.cs" />
     <Compile Include="Model\Invoices_Types.cs" />
     <Compile Include="Model\Default_Mail.cs" />
+    <Compile Include="Model\Mail_Type.cs" />
     <Compile Include="Model\Menfis_Invoices_Status.cs" />
+    <Compile Include="Model\Party.cs" />
     <Compile Include="Model\ReceivedInvoices.cs" />
     <Compile Include="Model\ReceivedBudgetTimeline.cs" />
     <Compile Include="Model\Received_Archived.cs" />
@@ -134,6 +137,14 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Mail_templates\Budget_template.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Mail_templates\NoBudget_template.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
