--- a/InvoicesBudgetValidator/app.config
+++ b/InvoicesBudgetValidator/app.config
@@ -59,15 +59,15 @@
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
 
   <connectionStrings>
-    <add name="ConnectionString" connectionString="Data Source=192.168.1.81;initial catalog=Menfis_GrupoIndi;user=sa;password=l0g5y5*1;"/>
-    <add name="ConnectionStringPresupuesto" connectionString="Data Source=192.168.1.81;initial catalog=Presupuesto_test;user=sa;password=l0g5y5*1;"/>
-    <add name="WebserviceURL" connectionString="http://66.219.58.242:8084/external_logsys/logsys2"/>
+    <add name="ConnectionString" connectionString="Data Source=bi.mexamerik.com;initial catalog=Menfis_GrupoIndi;user=sa;password=l0g5y5*1;"/>
+    <add name="ConnectionStringPresupuesto" connectionString="Data Source=bi.mexamerik.com;initial catalog=Presupuesto_test;user=sa;password=l0g5y5*1;"/>
   </connectionStrings>
   
   
   <appSettings>
       <add key="mailconnection" value="port=587;host=smtp.bizmail.yahoo.com;user=service@logsys.com.mx;password=9S#h-Iq[3-zn,y"/>
-      <add key="Mongo" value="mongodb://192.168.1.81:27017"/>
+      <add key="mailsavedir" value="D:\mails"/>
+      <add key="Mongo" value="mongodb://bi.mexamerik.com:27017"/>
       <add key="DB" value="Menfis_Emails"/>
       <add key="Collection" value="default_emails"/>
       <add key="menfisservices" value="http://bi.mexamerik.com:8089/services/received/invoice/"/>
