tls version fix

--- a/InvoicesBudgetValidator/app.config
+++ b/InvoicesBudgetValidator/app.config
@@ -59,18 +59,18 @@
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
 
   <connectionStrings>
-    <add name="ConnectionString" connectionString="Data Source=bi.mexamerik.com;initial catalog=Menfis_GrupoIndi;user=sa;password=l0g5y5*1;"/>
-    <add name="ConnectionStringPresupuesto" connectionString="Data Source=bi.mexamerik.com;initial catalog=Presupuesto_test;user=sa;password=l0g5y5*1;"/>
+    <add name="ConnectionString" connectionString="Data Source=localhost;initial catalog=cfdLOGSYSIndi;user=sa;password=l0g5y5*1;"/>
+    <add name="ConnectionStringPresupuesto" connectionString="Data Source=localhost;initial catalog=cfdLOGSYSIndi;user=sa;password=l0g5y5*1;"/>
   </connectionStrings>
   
   
   <appSettings>
-      <add key="mailconnection" value="port=587;host=smtp.bizmail.yahoo.com;user=service@logsys.com.mx;password=9S#h-Iq[3-zn,y"/>
+      <add key="mailconnection" value="port=587;host=mail.mensajeriafiscal.com;user=validador.cfdi@mensajeriafiscal.com;password=ctiuwgpjkjjfocdu"/>
       <add key="mailsavedir" value="D:\mails"/>
-      <add key="Mongo" value="mongodb://bi.mexamerik.com:27017"/>
+      <add key="Mongo" value="mongodb://localhost:27017"/>
       <add key="DB" value="Menfis_Emails"/>
       <add key="Collection" value="default_emails"/>
-      <add key="menfisservices" value="http://bi.mexamerik.com:8089/services/received/invoice/"/>
+      <add key="menfisservices" value="http://localhost:1855/received/invoice/"/>
       <add key="presupuesto_user" value="sistema:l0g5y5*1"/>
   </appSettings>
   
